Add operator chaining in exercise 2

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -3,7 +3,8 @@
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
-.odd-number.third-elem {
+/* tutaj mogla byc po prostu nazwa drugiej klasy czyli .third-elem */
+.odd-number.third-elem { 
     font-size:24px;
 }
 
