Add div for whole body and add tranform:translate property

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,7 +24,10 @@ img {
   max-width: 200px;
 }
 
-
+.whole {
+  height: 100vh;
+  transform: translateY(50%);
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
