--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -68,3 +68,16 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size:120%;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
+}
